# apollo

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DECISIONS_NEEDED.md  PROMPT.md  README.md  SESSION_LOG.md  TASKS.md  run-claude-code.sh  worktree-helper.sh
.claude/: settings.json
.github/workflows/: ci.yml
crates/apollo-audio/: Cargo.toml
crates/apollo-audio/src/: error.rs  fileops.rs  fingerprint.rs  hash.rs  lib.rs  reader.rs  scanner.rs  writer.rs
crates/apollo-cli/: Cargo.toml
crates/apollo-cli/src/: main.rs
crates/apollo-core/: Cargo.toml
crates/apollo-core/src/: config.rs  error.rs  lib.rs  library.rs  metadata.rs  playlist.rs  query.rs  template.rs
crates/apollo-db/: Cargo.toml
crates/apollo-db/migrations/: 0001_initial_schema.sql  0002_playlists.sql
crates/apollo-db/src/: error.rs  lib.rs  schema.rs
crates/apollo-lua/: Cargo.toml
crates/apollo-lua/src/: bindings.rs  error.rs  hooks.rs  lib.rs  plugin.rs  runtime.rs
crates/apollo-sources/: Cargo.toml
crates/apollo-sources/src/: cache.rs  error.rs  lib.rs
crates/apollo-sources/src/acoustid/: client.rs  mod.rs  types.rs
crates/apollo-sources/src/coverart/: client.rs  mod.rs  types.rs
crates/apollo-sources/src/discogs/: client.rs  mod.rs  types.rs
crates/apollo-sources/src/musicbrainz/: cached.rs  client.rs  mod.rs  types.rs
crates/apollo-web/: Cargo.toml
crates/apollo-web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/apollo-web/frontend/src/: App.svelte  app.css
crates/apollo-web/frontend/src/lib/api/: client.ts  types.ts
crates/apollo-web/frontend/src/lib/components/: AlbumCard.svelte  EmptyState.svelte  Header.svelte  Loading.svelte  Pagination.svelte  Sidebar.svelte  TrackRow.svelte
crates/apollo-web/frontend/src/routes/: AlbumDetail.svelte  Albums.svelte  Dashboard.svelte  PlaylistDetail.svelte  Playlists.svelte  Search.svelte  Tracks.svelte
crates/apollo-web/src/: error.rs  handlers.rs  import.rs  lib.rs  state.rs
hooks/: pre-commit
plugins/: clean_tags.lua  skip_hidden.lua
scripts/: pre-commit.sh  pre-push.sh
