[workspace]
resolver = "2"
members = [
    "crates/apollo-core",
    "crates/apollo-db",
    "crates/apollo-audio",
    "crates/apollo-sources",
    "crates/apollo-lua",
    "crates/apollo-web",
    "crates/apollo-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/apollo"
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Audio
lofty = "0.21"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Lua scripting (vendored to avoid pkg-config dependency)
mlua = { version = "0.9", features = ["lua54", "async", "serialize", "vendored"] }

# HTTP client (using rustls to avoid native openssl dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
dialoguer = "0.11"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"

# Testing
proptest = "1"
wiremock = "0.6"
tempfile = "3"

# Workspace crates (for internal dependencies)
apollo-core = { path = "crates/apollo-core" }
apollo-db = { path = "crates/apollo-db" }
apollo-audio = { path = "crates/apollo-audio" }
apollo-sources = { path = "crates/apollo-sources" }
apollo-lua = { path = "crates/apollo-lua" }
apollo-web = { path = "crates/apollo-web" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
