[package]
name = "apollo-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Audio file handling for Apollo music library manager"

[dependencies]
apollo-core = { workspace = true }
lofty = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
