[package]
name = "apollo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Apollo"

[[bin]]
name = "apollo"
path = "src/main.rs"

[dependencies]
apollo-core = { workspace = true }
apollo-db = { workspace = true }
apollo-audio = { workspace = true }
apollo-sources = { workspace = true }
apollo-lua = { workspace = true }
apollo-web = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
