[package]
name = "apollo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and logic for Apollo music library manager"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
