[package]
name = "apollo-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Database layer for Apollo music library manager"

[dependencies]
apollo-core = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
