[package]
name = "apollo-lua"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lua scripting support for Apollo"

[dependencies]
apollo-core = { workspace = true }
mlua = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
