[package]
name = "apollo-sources"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Metadata source integrations for Apollo"

[dependencies]
apollo-core = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }

[lints]
workspace = true
