[package]
name = "apollo-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web API and interface for Apollo"

[dependencies]
apollo-core = { workspace = true }
apollo-db = { workspace = true }
apollo-audio = { workspace = true }
apollo-sources = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
axum-test = "16"
tempfile = { workspace = true }

[lints]
workspace = true
